payment_server.log
  File "/Users/adarsh/Documents/cart-blanche-nova-ai/server/tool/x402_settlement.py", line 5
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file
